WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251497
[GStreamer][WebRTC] Crash in statistics handling on RPi3
https://bugs.webkit.org/show_bug.cgi?id=251497
Summary
[GStreamer][WebRTC] Crash in statistics handling on RPi3
Philippe Normand
Reported
2023-02-01 03:43:46 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-01 03:46:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9445
EWS
Comment 2
2023-02-01 07:50:13 PST
Committed
259680@main
(33dd5dfb48a0): <
https://commits.webkit.org/259680@main
> Reviewed commits have been landed. Closing PR #9445 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-01 07:51:25 PST
<
rdar://problem/104916150
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug