Crash in statistics handling on RPi3 https://bugs.webkit.org/show_bug.cgi?id=251497

Reviewed by NOBODY (OOPS!).

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::fillRTCCandidatePairStats): The state field is not optional, so for the time being fill it
with a value not necessarily corresponding to the real platform state.